# spotipy

./: LICENSE  README.md
client/: pubspec.yaml
client/android/app/: build.gradle
client/android/app/src/main/: AndroidManifest.xml
client/lib/: main.dart
client/lib/core/: utils.dart
client/lib/core/constants/: server_constant.dart
client/lib/core/failure/: failure.dart
client/lib/core/providers/: current_user_notifier.dart
client/lib/core/theme/: app_pallete.dart
client/lib/core/widgets/: custom_field.dart
client/lib/features/auth/model/: model.dart
client/lib/features/auth/repositories/: auth_local_repository.dart  auth_remote_repository.dart
client/lib/features/auth/view/pages/: login_page.dart  signup_page.dart
client/lib/features/auth/view/widgets/: auth_gradient_button.dart  custom_field.dart
client/lib/features/auth/viewmodel/: auth_view_model.dart  auth_view_model.g.dart
client/lib/features/home/model/: song_model.dart
client/lib/features/home/repositories/: home_repository.dart  home_repository.g.dart
client/lib/features/home/view/pages/: home_page.dart  songs_page.dart  upload_song_page.dart
client/lib/features/home/view/widgets/: audio_wave.dart
client/lib/features/home/viewmodel/: home_viewmodel.dart  home_viewmodel.g.dart
server/: .gitignore  pyproject.toml
server/src/: main.py  middlewares.py  models.py  schemas.py
server/src/config/: settings.py
server/src/infra/: database.py
server/src/routes/: auth.py  song.py
server/tests/: conftest.py  test_main.py
server/tests/test_models/: test_favorite.py  test_song.py  test_user.py
