[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Gabriel <gabrielfgsantos95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev server/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=server -vv'
post_test = 'coverage html'

[tool.pytest.ini_options]
pythonpath= "."
addopts = "-p no:warnings"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
